Reverting changes on two test inputs
because they were intended to have trailing spaces to check the
syntax :-)

Excluding these two files explicitly now from the pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,3 +2,8 @@
   rev: v2.2.3
   hooks:
   - id: trailing-whitespace
+    exclude: &exclude_files >
+      (?x)^(
+        tests/inputs/various-whitespace.filter|
+        tests/inputs/fuzzystring-leading-trailing-spaces.filter
+      )$
